# Voice-Controlled-OS-Shell

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  commands.py  executor.py  logging_util.py  main.py  parser.py  state.py  stt.py  tts.py  ui.py
tests/: __init__.py  test_parser.py
